# bbb-live-library

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  config.docker.toml  config.toml  docker-compose.yml  entrypoint.sh
.claude/: settings.local.json
backend/: Cargo.toml
backend/migrations/: 001_initial.sql  002_schedule_stream_url_and_status.sql  003_add_import_sources.sql  004_schedule_room_url_and_bot_name.sql  005_remove_schedule_meeting_id.sql  006_drop_tags.sql  007_replace_bbb_meeting_id_with_file_hash.sql  008_schedule_offsets_and_category.sql
backend/src/: config.rs  db.rs  error.rs  main.rs  models.rs
backend/src/api/: categories.rs  import.rs  mod.rs  playback.rs  recordings.rs  schedules.rs  settings.rs  stats.rs  tags.rs
backend/src/bbb/: client.rs  importer.rs  mod.rs  public.rs
backend/src/capture/: browser_recorder.rs  common.rs  mod.rs  recorder.rs  scheduler.rs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: categories.ts  client.ts  import.ts  recordings.ts  schedules.ts  settings.ts  stats.ts  tags.ts  types.ts
frontend/src/components/: CategoryCard.tsx  CategoryEditor.tsx  CategoryForm.tsx  CategorySection.tsx  CategoryTagEditor.tsx  FilterSidebar.tsx  MetadataPanel.tsx  Pagination.tsx  RecordingCard.tsx  RecordingGrid.tsx  RecordingListItem.tsx  ScheduleCard.tsx  ScheduleForm.tsx  Sidebar.tsx  StatsCard.tsx  VideoPlayer.tsx
frontend/src/hooks/: useDocumentTitle.ts  useTimezone.ts
recorder/: package-lock.json  record.js
(+8 files in other folders)
